Misc. animation polishing